	"term") failed in partial models when there was no 'data='
	argument, but the variables were in the global workspace. The
	first fix also seems to allow anova(<prc.object>, by = "axis")
	that used to fail. In addition, there is one unsolved problem with
	search order: stats function C() is found instead of variable 'C'
	and this gives an error message "object is not a matrix".
	
Version 2.1-19 (closed September 16, 2012)

	* adonis: Small changes in calculations. Simplified calculations
	of matrix G as centred distance matrix, and does not keep n x n
	matrices that are not needed (A) or used only once (identity
	matrix I). These can make calculations marginally faster and
	reduce the memory usage, but probably there are no observable
	effects in most data sets. The new centring is probably more
	accurate than older, and therefore the last significant digits can
	slightly change (magnitude 1e-12 in tests).

	* betadisper: An effective R stats .C function was used for double
	centring, but it was removed from the API in r60360 | ripley |
	2012-08-22 07:59:00 UTC (Wed, 22 Aug 2012). This removal stopped
	betadisper() with error. Now we have a less efficient R code for
	the same purpose. However, the effects in timing should be
	negligible.
 
	* density methods: all vegan functions that return simulated or
	permuted statistics have now density() methods that directly
	access the returned statistic. The functions return an object of
	class "vegandensity" that inherits from class "density". The
	object is identical to class "density", but it is amended with
	item "observed" that contains the observed statistic. The observed
	statistic is also put among permuted values when estimating the
	density. This can cause a pimple in density lines when the
	observed statistic is very different from simulated values, but it
	is consistent with the permutation tests.

	The function has a plot.vegandensity() function that is similar to